--- a/src/Views/Navigation.html
+++ b/src/Views/Navigation.html
@@ -1,3 +1,8 @@
+<div class="compass">
+    <div class="compass-rotation-marker" data-bind="cesiumSvgPath: { path: svgCompassRotationMarker, width: 145, height: 145 }"></div>
+    <div class="compass-outer-ring" data-bind="cesiumSvgPath: { path: svgCompassOuterRing, width: 145, height: 145 }"></div>
+    <div class="compass-gyro" data-bind="cesiumSvgPath: { path: svgCompassGyro, width: 145, height: 145 }"></div>
+</div>
 <div class="navigation-controls">
     <div class="navigation-control" data-bind="click: zoomIn" title="Zoom In">
         <div class="navigation-control-icon-zoom-in" data-bind="cesiumSvgPath: { path: svgZoomIn, width: 22, height: 22 }"></div>
