--- a/src/Styles/Navigation.less
+++ b/src/Styles/Navigation.less
@@ -54,7 +54,7 @@
     .opaque-to-input;
     position: absolute;
     right: 10px;
-    top: 50px;
+    top: 60px;
     width: 145px;
     height: 145px;
     
@@ -67,7 +67,7 @@
 
 .compass-outer-ring {
     position: absolute;
-    top: 15px;
+    top: 0;
     width: 145px;
     height: 145px;
     fill: #CCC;
@@ -75,7 +75,7 @@
 
 .compass-gyro {
     position: absolute;
-    top: 15px;
+    top: 0;
     width: 145px;
     height: 145px;
     fill: #CCC;
@@ -83,7 +83,7 @@
 
 .compass-rotation-marker {
     position: absolute;
-    top: 15px;
+    top: 0;
     width: 145px;
     height: 145px;
     fill: @highlight-color;
