--- a/src/Styles/Navigation.less
+++ b/src/Styles/Navigation.less
@@ -70,7 +70,17 @@
     top: 0;
     width: 145px;
     height: 145px;
-    fill: #CCC;
+    fill: #999;
+}
+
+.compass-outer-ring-background {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 65px;
+    height: 65px;
+    border-radius: 65px;
+    border: 20px solid @floating-background-color;
 }
 
 .compass-gyro {
@@ -79,6 +89,17 @@
     width: 145px;
     height: 145px;
     fill: #CCC;
+}
+
+.compass-gyro-background {
+    position: absolute;
+    top: 47px;
+    left: 47px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    background-color: @floating-background-color;
+    border: 1px solid #999;
 }
 
 .compass-rotation-marker {
