--- a/src/Views/Navigation.html
+++ b/src/Views/Navigation.html
@@ -1,6 +1,8 @@
 <div class="compass" title="Drag the outer ring to rotate or the inner gyroscope to free orbit.  TIP: free orbit by holding the CTRL key while left-click dragging the map." data-bind="event: { mousedown: handleMouseDown }">
+    <div class="compass-outer-ring-background"></div>
     <div class="compass-rotation-marker" data-bind="visible: isOrbiting, style: { transform: 'rotate(-' + orbitCursorAngle + 'rad)', opacity: orbitCursorOpacity }, cesiumSvgPath: { path: svgCompassRotationMarker, width: 145, height: 145 }"></div>
     <div class="compass-outer-ring" title="Click and drag to rotate the camera" data-bind="style: { transform: 'rotate(-' + heading + 'rad)' }, cesiumSvgPath: { path: svgCompassOuterRing, width: 145, height: 145 }"></div>
+    <div class="compass-gyro-background"></div>
     <div class="compass-gyro" data-bind="cesiumSvgPath: { path: svgCompassGyro, width: 145, height: 145 }"></div>
 </div>
 <div class="navigation-controls">
