Hide the compass when printing and on small screens.

--- a/src/Styles/Navigation.less
+++ b/src/Styles/Navigation.less
@@ -115,10 +115,16 @@
     .navigation-controls {
         display: none;
     }
+    .compass {
+        display: none;
+    }
 }
 
 @media print {
     .navigation-controls {
+        display: none;
+    }
+    .compass {
         display: none;
     }
 }
