Don't show the timeline when printing.

--- a/src/Styles/Map.less
+++ b/src/Styles/Map.less
@@ -86,4 +86,10 @@ button.cesium-infoBox-camera {
     .cesium-infoBox {
         display: none;
     }
+    .cesium-timeline-main {
+        display: none;
+    }
+    .cesium-viewer-animationContainer {
+        display: none;
+    }
 }
