--- a/src/Styles/SharePopup.less
+++ b/src/Styles/SharePopup.less
@@ -9,6 +9,7 @@
 .share-popup-header {
     line-height: 40px;
     border-bottom: @panel-element-border;
+    background-color: rgba(0,0,0,0.2);
 }
 
 .share-popup-header h1 {
