--- a/src/Views/ToolsPanel.html
+++ b/src/Views/ToolsPanel.html
@@ -33,7 +33,7 @@
                 <h2>Export Data Menu</h2>
                 <label class="tools-content-type">
                     Select the dataset layers to export:
-                    <select class="tools-content-type-select" data-bind="value: dataType">
+                    <select class="tools-content-type-select" data-bind="value: catalogFilter">
                         <option value="opened">Opened</option>
                         <option value="seleteced">Selected</option>
                         <option value="all">All</option>
