--- a/src/Views/ToolsPanel.html
+++ b/src/Views/ToolsPanel.html
@@ -29,8 +29,14 @@
                     <input class="tools-url-add-button" type="submit" value="Cache Tiles" />
                 </div>
             </form>
+            <form class="tools-form" data-bind="submit: exportFile">
+                <h2>Export Data Menu to File</h2>
+                <div class="tools-url-input-outer-holder">
+                    <input class="tools-url-add-button" type="submit" value="Export to File" />
+                </div>
+            </form>
             <form class="tools-form" data-bind="submit: exportCkan">
-                <h2>Export Data Menu</h2>
+                <h2>Export to CKAN</h2>
                 <label class="tools-content-type">
                     Select the dataset layers to export:
                     <select class="tools-content-type-select" data-bind="value: catalogFilter">
