ui for ckan export

--- a/src/Styles/ToolsPanel.less
+++ b/src/Styles/ToolsPanel.less
@@ -1,4 +1,4 @@
-@tools-panel-height: 470px;
+@tools-panel-height: 500px;
 
 .tools-panel {
     .modal;
@@ -61,10 +61,11 @@
 
 .tools-url-input-outer-holder {
     position: relative;
-    width: 50%;
+    width: 80%;
     height: 30px;
     background-color: @panel-form-input-background-color;
     margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 @tools-url-input-padding: 16px;
@@ -128,6 +129,7 @@ p.tools-content-new-section {
     height: 30px;
     border: 0;
     margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .tools-url-add-button {
@@ -135,7 +137,7 @@ p.tools-content-new-section {
     background-color: @panel-form-button-background-color;
     border: 0;
     height: 30px;
-    width: 100px;
+    width: 120px;
     color: @panel-form-button-text-color;
     right: 0;
     top: 0;
