--- a/src/Views/ToolsPanel.html
+++ b/src/Views/ToolsPanel.html
@@ -5,23 +5,18 @@
             <h1>Advanced Tools</h1>
         </div>
         <div class="tools-content">
-            <p>
-                This panel provides advanced tools for National Map
-            </p>
             <form class="tools-form" data-bind="submit: cacheTiles">
                 <h2>Tile Caching</h2>
                 <label class="tools-content-type">
                     Select the dataset layers to cache:
-                    <select class="tools-content-type-select" data-bind="value: catalogFilter">
+                    <select class="tools-content-type-select" data-bind="value: cacheFilter">
                         <option value="opened">Opened</option>
                         <option value="seleteced">Selected</option>
                         <option value="all">All</option>
                     </select>
                 </label>
 
-                <p>
-                    Enter the number of tile levels to cache
-                </p>
+                Enter the number of tile levels to cache
                 <div class="tools-url-input-outer-holder">
                     <div class="tools-url-input-inner-holder">
                         <input class="tools-url-input" type="text" data-bind="value: cacheLevels" />
@@ -29,35 +24,36 @@
                     <input class="tools-url-add-button" type="submit" value="Cache Tiles" />
                 </div>
             </form>
+
             <form class="tools-form" data-bind="submit: exportFile">
-                <h2>Export Data Menu to File</h2>
+                <h2>Download Data Menu to File</h2>
                 <div class="tools-url-input-outer-holder">
-                    <input class="tools-url-add-button" type="submit" value="Export to File" />
+                    <input class="tools-url-add-button" type="submit" value="Download to File" />
                 </div>
             </form>
+
             <form class="tools-form" data-bind="submit: exportCkan">
-                <h2>Export to CKAN</h2>
+                <h2>Export Data Menu to CKAN</h2>
                 <label class="tools-content-type">
                     Select the dataset layers to export:
-                    <select class="tools-content-type-select" data-bind="value: catalogFilter">
+                    <select class="tools-content-type-select" data-bind="value: ckanFilter">
                         <option value="opened">Opened</option>
                         <option value="seleteced">Selected</option>
                         <option value="all">All</option>
                     </select>
                 </label>
 
-                <p>
-                    Click to export to a text file
-                </p>
-                <div class="tools-url-input-outer-holder">
-                    <input class="tools-url-add-button" type="submit" value="Export to File" />
-                </div>
-                <p>
-                    Or enter the url of a ckan instance
-                </p>
+                Enter the url of a ckan server
                 <div class="tools-url-input-outer-holder">
                     <div class="tools-url-input-inner-holder">
-                        <input class="tools-url-input" type="text" data-bind="value: cacheLevels" />
+                        <input class="tools-url-input" type="text" data-bind="value: ckanUrl" />
+                    </div>
+                </div>
+
+                Enter the api key to the ckan server
+                <div class="tools-url-input-outer-holder">
+                    <div class="tools-url-input-inner-holder">
+                        <input class="tools-url-input" type="text" data-bind="value: ckanApiKey" />
                     </div>
                     <input class="tools-url-add-button" type="submit" value="Export to CKAN" />
                 </div>
