integrating ga data part 1

--- a/src/Views/ToolsPanel.html
+++ b/src/Views/ToolsPanel.html
@@ -11,8 +11,9 @@
                     Select the dataset layers to cache:
                     <select class="tools-content-type-select" data-bind="value: cacheFilter">
                         <option value="opened">Opened</option>
-                        <option value="seleteced">Selected</option>
                         <option value="all">All</option>
+                        <option value="selected">Selected</option>
+                        <option value="unselected">Unselected</option>
                     </select>
                 </label>
 
@@ -38,8 +39,9 @@
                     Select the dataset layers to export:
                     <select class="tools-content-type-select" data-bind="value: ckanFilter">
                         <option value="opened">Opened</option>
-                        <option value="seleteced">Selected</option>
                         <option value="all">All</option>
+                        <option value="selected">Selected</option>
+                        <option value="unselected">Unselected</option>
                     </select>
                 </label>
 
