Basic feature info popup working.

--- a/src/main.less
+++ b/src/main.less
@@ -58,6 +58,7 @@
 @import "Styles/DistanceLegend.less";
 @import "Styles/DragDrop.less";
 @import "Styles/ExplorerPanel.less";
+@import "Styles/FeatureInfoPanel.less";
 @import "Styles/LocationBar.less";
 @import "Styles/MenuBar.less";
 @import "Styles/Navigation.less";
