HTML/CSS optimisation for modals

--- a/src/Styles/PopupMessage.less
+++ b/src/Styles/PopupMessage.less
@@ -20,7 +20,7 @@
     right: 10px;
     top: 4px;
     cursor: pointer;
-    font-size: 18pt;
+    font-size: 15px;
     font-weight: bold;
     color: @panel-emphasized-text-color;
 }
