--- a/src/Styles/SettingsPanel.less
+++ b/src/Styles/SettingsPanel.less
@@ -50,7 +50,8 @@
 }
 
 .settings-panel-section-header {
-    padding: 5px;
+    font-size: 0.9em;
+    padding: 10px;
     background-color: @panel-section-background-color;
     color: @panel-emphasized-text-color;
 }
