--- a/src/Styles/NowViewingTab.less
+++ b/src/Styles/NowViewingTab.less
@@ -82,8 +82,8 @@
     padding-left: 16px;
     padding-top: 16px;
     padding-bottom: 10px;
+    font-size: 0.95em;
     color: @panel-emphasized-text-color;
-    font-weight: lighter;
     border-top: @panel-element-border;
 }
 
