Separated data catalogue icons styles
- updated reorder icon

--- a/src/Styles/AddDataPanel.less
+++ b/src/Styles/AddDataPanel.less
@@ -1,4 +1,4 @@
-@add-data-panel-height: 450px;
+@add-data-panel-height: 470px;
 
 .add-data-panel {
     .modal;
@@ -29,7 +29,7 @@
 .add-data-content h2 {
     font-weight: bold;
     padding-top: 10px;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
 }
 
 .add-data-browse-link {
@@ -50,9 +50,9 @@
 }
 
 .add-data-url-input {
-  width: 396px;
+  width: 394px;
   padding-left: 10px;
-  padding-right: 60px;
+  padding-right: 2px;
 }
 
 .add-data-url-button {
@@ -84,4 +84,5 @@
 
 .add-data-tip {
     margin-top: 25px;
+    font-style: italic;
 }
