--- a/src/Styles/DataCatalogTab.less
+++ b/src/Styles/DataCatalogTab.less
@@ -83,6 +83,21 @@
     fill: @panel-text-color;
 }
 
+.data-catalog-arrow {
+  position: relative;
+  width: 12px;
+  height: 12px;
+  fill: @panel-text-color;
+}
+
+.data-catalog-item-checkbox {
+  position: relative;
+  top: 2px;
+  width: 15px;
+  height: 15px;
+  fill: @panel-text-color;
+}
+
 .data-catalog-icon-holder {
     display: table-cell;
     width: 20px;
