Improvements to performance check tool.

--- a/src/Styles/PopupMessage.less
+++ b/src/Styles/PopupMessage.less
@@ -15,6 +15,12 @@
     padding: 15px;
 }
 
+.popup-message-content h1 {
+    font-weight: bold;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+
 .popup-message-close-button {
     position: absolute;
     right: 10px;
