Optionally use cache when testing/caching tiles.

--- a/src/Views/ToolsPanel.html
+++ b/src/Views/ToolsPanel.html
@@ -16,6 +16,13 @@
                     </select>
                 </label>
 
+                <div>
+                    <label class="tools-content-type">
+                        <input type="checkbox" data-bind="checked: useCache" />
+                        Use proxy cache
+                    </label>
+                </div>
+
                 Enter the number of tile levels to request
                 <div class="tools-url-input-outer-holder">
                     <div class="tools-url-input-inner-holder">
