--- a/src/Views/ToolsPanel.html
+++ b/src/Views/ToolsPanel.html
@@ -13,8 +13,6 @@
                         <option value="opened">All Opened</option>
                         <option value="enabled">All Enabled</option>
                         <option value="all">All</option>
-                        <option value="selected">Selected</option>
-                        <option value="unselected">Unselected</option>
                     </select>
                 </label>
 
@@ -46,10 +44,9 @@
                 <label class="tools-content-type">
                     Select the dataset layers to export:
                     <select class="tools-content-type-select" data-bind="value: ckanFilter">
-                        <option value="opened">Opened</option>
+                        <option value="opened">All Opened</option>
+                        <option value="enabled">All Enabled</option>
                         <option value="all">All</option>
-                        <option value="selected">Selected</option>
-                        <option value="unselected">Unselected</option>
                     </select>
                 </label>
 
