Fix text color.

--- a/src/Styles/FeatureInfoPanel.less
+++ b/src/Styles/FeatureInfoPanel.less
@@ -21,6 +21,7 @@
 }
 
 .feature-info-panel-section-content {
+    color: @panel-text-color;
     font-weight: lighter;
     padding-left: 10px;
     padding-right: 10px;
