--- a/src/Views/FeatureInfoPanel.html
+++ b/src/Views/FeatureInfoPanel.html
@@ -1,4 +1,4 @@
-<div class="feature-info-panel" data-bind="visible: isVisible">
+<div class="feature-info-panel" data-bind="css: { 'feature-info-panel-hidden': !isVisible }">
     <div class="feature-info-panel-body">
         <div class="feature-info-panel-section">
             <div class="feature-info-panel-section-header" data-bind="text: name"></div>
