Feature popup style tweaks.

--- a/src/Styles/FeatureInfoPanel.less
+++ b/src/Styles/FeatureInfoPanel.less
@@ -4,7 +4,7 @@
     visibility: visible;
     background-color: @panel-background-color;
     top: 60px;
-    right: 100px;
+    right: 95px;
     max-width: 600px;
     position: absolute;
     box-shadow: @panel-box-shadow;
@@ -33,27 +33,25 @@
 }
 
 .feature-info-panel-section-header {
-    padding: 5px;
+    font-size: 0.9em;
+    padding: 8px;
     background-color: @panel-section-background-color;
     color: @panel-emphasized-text-color;
+    border-bottom: @panel-element-border;
 }
 
 .feature-info-panel-section-content {
     color: @panel-text-color;
     font-weight: lighter;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 10px;
 }
 
 .feature-info-panel-close-button {
     position: absolute;
-    right: 6px;
-    top: 1px;
+    right: 10px;
+    top: 6px;
     cursor: pointer;
-    font-size: 18pt;
-    font-weight: bold;
+    font-size: 12pt;
     color: @panel-emphasized-text-color;
 }
 
