Add selection indicator.  Not great in Leaflet yet.

--- a/src/main.less
+++ b/src/main.less
@@ -67,6 +67,7 @@
 @import "Styles/MenuBar.less";
 @import "Styles/Navigation.less";
 @import "Styles/PopupMessage.less";
+@import "Styles/SelectionIndicator.less";
 @import "Styles/SettingsPanel.less";
 @import "Styles/SharePopup.less";
 @import "Styles/ToolsPanel.less";
