--- a/src/Styles/SelectionIndicator.less
+++ b/src/Styles/SelectionIndicator.less
@@ -1,9 +1,11 @@
 .selection-indicator {
+    .transparent-to-input;
     visibility: hidden;
     position: absolute;
     width: 50px;
     height: 50px;
     fill: white;
+    z-index: 2000;
 }
 
 .selection-indicator-visible {
