--- a/src/Views/SelectionIndicator.html
+++ b/src/Views/SelectionIndicator.html
@@ -1,3 +1,3 @@
-<div class="selection-indicator" data-bind="style: { left: screenPositionX, top: screenPositionY }, css: { 'selection-indicator-visible': isVisible }">
+<div class="selection-indicator" data-bind="style: { left: screenPositionX, top: screenPositionY }, css: { 'selection-indicator-visible': isVisible && isCesium }">
     <img src="images/NM-LocationTarget.svg" width="50" height="50" alt="" />
 </div>
