check for popup

--- a/src/Views/PopupMessage.html
+++ b/src/Views/PopupMessage.html
@@ -1,4 +1,4 @@
-<div class="modal-background" data-bind="click: closeIfClickOnBackground">
+<div class="modal-background" id="popup-window" data-bind="click: closeIfClickOnBackground">
     <div class="popup-message">
         <div class="modal-header">
             <div class="modal-close-button" data-bind="click: close">&times;</div>
