--- a/src/Styles/ToolsPanel.less
+++ b/src/Styles/ToolsPanel.less
@@ -115,6 +115,11 @@
     font-style: italic;
 }
 
+.tools-number-input {
+    width: 30px;
+    height: 34px;
+}
+
 p.tools-content-new-section {
     margin-top: 32px;
 }
