Add progress bar and some styling to performance tool.

--- a/src/Styles/ToolsPanel.less
+++ b/src/Styles/ToolsPanel.less
@@ -162,3 +162,11 @@ p.tools-content-new-section {
 .tools-tip strong {
     font-weight: bold;
 }
+.tools-loading-message {
+  color: gray;
+}
+.tools-loading-message-bar {
+  background: gray;
+  display: block;
+  height: 10px;
+}
