Actual fix alternating colors.

--- a/src/Styles/Map.less
+++ b/src/Styles/Map.less
@@ -38,6 +38,10 @@
     background-color: rgba(84, 84, 84, 0.8);
 }
 
+.cesium-infoBox-defaultTable tr:nth-child(even) {
+    background-color: rgba(84, 84, 84, 0.25);
+}
+
 .cesium-timeline-main {
     z-index: 1000;
 }
