Trim CKAN catalog error message, add exception string to output.

--- a/src/Styles/PopupMessage.less
+++ b/src/Styles/PopupMessage.less
@@ -30,3 +30,10 @@
     font-weight: bold;
     color: @panel-emphasized-text-color;
 }
+
+.popup-message-content pre,
+.popup-message-content code {
+    font-family: 'Lucida Console', 'Monaco', 'Monospaced';
+    font-size: 77%;
+    background:#1D5B98;
+}
