--- a/src/Styles/PopupMessage.less
+++ b/src/Styles/PopupMessage.less
@@ -36,4 +36,8 @@
     font-family: 'Lucida Console', 'Monaco', 'Monospaced';
     font-size: 77%;
     background:#1D5B98;
+    overflow:auto;
+    margin-top:10px;
+    padding:10px;
+    border:1px solid gray;
 }
