Bring in TerriaJS via npm instead of a git submodule.

--- a/src/main.less
+++ b/src/main.less
@@ -49,30 +49,30 @@
 
 
 
-@import "../third_party/TerriaJS/src/Styles/Reset.less";
-@import "../third_party/TerriaJS/src/Styles/Core.less";
-@import "../third_party/TerriaJS/src/Styles/Panels.less";
-@import "../third_party/TerriaJS/src/Styles/Map.less";
-@import "../third_party/TerriaJS/src/Styles/Floating.less";
+@import "npm://terriajs/Styles/Reset.less";
+@import "npm://terriajs/Styles/Core.less";
+@import "npm://terriajs/Styles/Panels.less";
+@import "npm://terriajs/Styles/Map.less";
+@import "npm://terriajs/Styles/Floating.less";
 
 // Individual widgets
-@import "../third_party/TerriaJS/src/Styles/AddDataPanel.less";
-@import "../third_party/TerriaJS/src/Styles/BrandBar.less";
-@import "../third_party/TerriaJS/src/Styles/CatalogItemInfo.less";
-@import "../third_party/TerriaJS/src/Styles/DistanceLegend.less";
-@import "../third_party/TerriaJS/src/Styles/DragDrop.less";
-@import "../third_party/TerriaJS/src/Styles/ExplorerPanel.less";
-@import "../third_party/TerriaJS/src/Styles/FeatureInfoPanel.less";
-@import "../third_party/TerriaJS/src/Styles/LocationBar.less";
-@import "../third_party/TerriaJS/src/Styles/MenuBar.less";
-@import "../third_party/TerriaJS/src/Styles/Navigation.less";
-@import "../third_party/TerriaJS/src/Styles/PopupMessage.less";
-@import "../third_party/TerriaJS/src/Styles/SelectionIndicator.less";
-@import "../third_party/TerriaJS/src/Styles/SettingsPanel.less";
-@import "../third_party/TerriaJS/src/Styles/SharePopup.less";
-@import "../third_party/TerriaJS/src/Styles/ToolsPanel.less";
+@import "npm://terriajs/Styles/AddDataPanel.less";
+@import "npm://terriajs/Styles/BrandBar.less";
+@import "npm://terriajs/Styles/CatalogItemInfo.less";
+@import "npm://terriajs/Styles/DistanceLegend.less";
+@import "npm://terriajs/Styles/DragDrop.less";
+@import "npm://terriajs/Styles/ExplorerPanel.less";
+@import "npm://terriajs/Styles/FeatureInfoPanel.less";
+@import "npm://terriajs/Styles/LocationBar.less";
+@import "npm://terriajs/Styles/MenuBar.less";
+@import "npm://terriajs/Styles/Navigation.less";
+@import "npm://terriajs/Styles/PopupMessage.less";
+@import "npm://terriajs/Styles/SelectionIndicator.less";
+@import "npm://terriajs/Styles/SettingsPanel.less";
+@import "npm://terriajs/Styles/SharePopup.less";
+@import "npm://terriajs/Styles/ToolsPanel.less";
 
 // Tabs on the Explorer Panel
-@import "../third_party/TerriaJS/src/Styles/DataCatalogTab.less";
-@import "../third_party/TerriaJS/src/Styles/NowViewingTab.less";
-@import "../third_party/TerriaJS/src/Styles/SearchTab.less";
+@import "npm://terriajs/Styles/DataCatalogTab.less";
+@import "npm://terriajs/Styles/NowViewingTab.less";
+@import "npm://terriajs/Styles/SearchTab.less";
