Incorporate Leaflet CSS into app's main CSS file.

--- a/lib/Styles/Map.less
+++ b/lib/Styles/Map.less
@@ -1,4 +1,5 @@
 @import url("../build/Cesium/Widgets/widgets.css");
+@import (inline) "npm://leaflet/dist/leaflet.css";
 
 #cesiumContainer .cesium-widget-credits {
     display: block;
