moved over from nm

--- a/lib/Styles/NowViewingTab.less
+++ b/lib/Styles/NowViewingTab.less
@@ -162,3 +162,83 @@
     position: relative;
     border: 1px dashed gray;
 }
+
+
+.now-viewing-abs-controls {
+    padding-left: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: @panel-form-input-text-color;
+}
+
+.now-viewing-abs-percent {
+    display: inline-block;
+    padding-bottom: 10px;
+}
+
+.now-viewing-abs-table {
+    padding: 5px;
+    font-size: 0.9em;
+    font-weight: lighter;
+    color: @panel-form-input-text-color;
+    border: @panel-element-border;
+}
+
+.now-viewing-abs-table td {
+    word-break: break-word;
+}
+
+.now-viewing-abs-section {
+    padding-bottom: 20px;
+    color: @panel-form-input-text-color;
+}
+
+.now-viewing-abs-properties-name-cell {
+    white-space: nowrap;
+}
+
+.now-viewing-abs-properties-level1 {
+    padding-left: 0px;
+}
+
+
+.now-viewing-abs-properties-level2 {
+    padding-left: 20px;
+}
+
+.now-viewing-abs-properties-level3 {
+    padding-left: 40px;
+}
+
+.now-viewing-abs-properties-level4 {
+    padding-left: 60px;
+}
+
+.now-viewing-abs-properties-level5 {
+    padding-left: 80px;
+}
+
+.now-viewing-abs-properties-parent {
+    cursor: pointer;
+}
+
+.now-viewing-abs-properties-arrow {
+    position: relative;
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    top: 3px;
+}
+
+.now-viewing-abs-properties-name {
+    display: inline-block;
+}
+
+.now-viewing-abs-icon {
+    position: relative;
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    fill: @panel-emphasized-text-color;
+}
+
