--- a/src/Views/CatalogItemInfo.html
+++ b/src/Views/CatalogItemInfo.html
@@ -45,10 +45,7 @@
             </div>
             <!-- /ko -->
 
-            <!-- ko if:
-            !catalogItem.description &&
-            (!catalogItem.info || !catalogItem.info.some(function(i){return (i.name === "Description" || i.name == "description")}))
-            -->
+            <!-- ko if: !catalogItem.hasDescription -->
             <div class="catalog-item-info-section">
                 <div class="catalog-item-info-description">Please contact the provider of this data for more information, including information about usage rights and constraints.</div>
             </div>
