brute force abs data caching

--- a/lib/Views/ToolsPanel.html
+++ b/lib/Views/ToolsPanel.html
@@ -71,6 +71,13 @@
                     <input class="tools-url-add-button" type="submit" value="Export to CKAN" />
                 </div>
             </form>
+
+            <form class="tools-form" data-bind="submit: cacheAbsData">
+                <h2>Cache selected ABS datasets</h2>
+                <div class="tools-url-input-outer-holder">
+                    <input class="tools-url-add-button" type="submit" value="Cache Datasets" />
+                </div>
+            </form>
         </div>
     </div>
 </div>
