--- a/lib/Styles/Map.less
+++ b/lib/Styles/Map.less
@@ -1,4 +1,4 @@
-@import url("./Cesium/build/Widgets/widgets.css");
+@import "@{cesium-path}/build/Widgets/widgets.css";
 @import (inline) "npm://leaflet/dist/leaflet.css";
 
 #cesiumContainer .cesium-widget-credits {
