Fix module paths.

--- a/index.less
+++ b/index.less
@@ -1,3 +1,6 @@
+@terriajs-path: "./TerriaJS";
+@cesium-path: "@{terriajs-path}/build/Cesium";
+
 @default-font: 'Roboto', sans-serif;
 @highlight-color: #68ADFE;
 @left-side-panels-width: 350px;
