--- a/lib/Views/NowViewingTab.html
+++ b/lib/Views/NowViewingTab.html
@@ -7,7 +7,7 @@
         <div class="now-viewing-item" data-bind="attr: { nowViewingIndex: $index }, event : { dragenter: $root.dragEnter.bind($root), dragover: $root.dragEnter.bind($root) }">
             <div class="now-viewing-item-top-row" data-bind="attr: { draggable: supportsReordering, nowViewingIndex: $index }, event : { dragstart: $root.dragStart.bind($root), dragend: $root.dragEnd.bind($root), selectstart: $root.selectStart.bind($root) }">
                 <div class="now-viewing-item-drag-handle-holder">
-                    <img class="now-viewing-item-drag-handle" data-bind="visible: supportsReordering" draggable="false" src="images/Reorder.svg" width="12" height="24" alt="Drag to reorder data sources." title="Drag to reorder data sources." />
+                    <img class="now-viewing-item-drag-handle" data-bind="visible: supportsReordering, attr: { src: $root.nowViewing.terria.baseUrl + 'images/Reorder.svg' }" draggable="false" width="12" height="24" alt="Drag to reorder data sources." title="Drag to reorder data sources." />
                 </div>
                 <div class="now-viewing-item-icon-holder">
                     <div class="now-viewing-item-checkbox clickable" data-bind="click: toggleShown, cesiumSvgPath: { path: isShown ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }, css: { 'now-viewing-shown-item': isShown }"></div>
