--- a/lib/Styles/NowViewingTab.less
+++ b/lib/Styles/NowViewingTab.less
@@ -176,7 +176,17 @@
     padding-bottom: 10px;
 }
 
-.now-viewing-abs-table {
+.now-viewing-abs-section {
+    padding-bottom: 20px;
+    color: @panel-form-input-text-color;
+}
+
+.now-viewing-csv-section {
+    padding-bottom: 20px;
+    color: @panel-form-input-text-color;
+}
+
+.now-viewing-tree-table {
     padding: 5px;
     font-size: 0.9em;
     font-weight: lighter;
@@ -184,45 +194,40 @@
     border: @panel-element-border;
 }
 
-.now-viewing-abs-table td {
+.now-viewing-tree-table td {
     word-break: break-word;
 }
 
-.now-viewing-abs-section {
-    padding-bottom: 20px;
-    color: @panel-form-input-text-color;
-}
-
-.now-viewing-abs-properties-name-cell {
+.now-viewing-tree-properties-name-cell {
     white-space: nowrap;
 }
 
-.now-viewing-abs-properties-level1 {
+.now-viewing-tree-properties-level1 {
     padding-left: 0px;
 }
 
 
-.now-viewing-abs-properties-level2 {
+.now-viewing-tree-properties-level2 {
     padding-left: 20px;
 }
 
-.now-viewing-abs-properties-level3 {
+.now-viewing-tree-properties-level3 {
     padding-left: 40px;
 }
 
-.now-viewing-abs-properties-level4 {
+.now-viewing-tree-properties-level4 {
     padding-left: 60px;
 }
 
-.now-viewing-abs-properties-level5 {
+.now-viewing-tree-properties-level5 {
     padding-left: 80px;
 }
 
-.now-viewing-abs-properties-parent {
+.now-viewing-tree-properties-parent {
     cursor: pointer;
 }
 
-.now-viewing-abs-properties-arrow {
+.now-viewing-tree-properties-arrow {
     position: relative;
     display: inline-block;
     width: 16px;
@@ -230,11 +235,11 @@
     top: 3px;
 }
 
-.now-viewing-abs-properties-name {
+.now-viewing-tree-properties-name {
     display: inline-block;
 }
 
-.now-viewing-abs-icon {
+.now-viewing-tree-icon {
     position: relative;
     display: inline-block;
     width: 16px;
