Add support for Markdown+HTML via "markdown" ko binding.

--- a/lib/Styles/CatalogItemInfo.less
+++ b/lib/Styles/CatalogItemInfo.less
@@ -56,6 +56,24 @@
     word-break: break-word;
 }
 
+.catalog-item-info-description p {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+.catalog-item-info-description strong {
+    font-weight: bold;
+}
+
+.catalog-item-info-description em {
+    font-style: italic;
+}
+
+.catalog-item-info-description ul {
+    list-style: initial;
+    padding-left: 20px;
+}
+
 .catalog-item-info-field {
     position: relative;
     left: 10px;
