Use markdown for feature info and popup messages.

--- a/lib/Views/FeatureInfoPanel.html
+++ b/lib/Views/FeatureInfoPanel.html
@@ -5,7 +5,7 @@
                 <span class="feature-info-panel-section-label" data-bind="text: name"></span>
                 <div class="feature-info-panel-close-button" data-bind="click: close">&times;</div>
             </div>
-            <div class="feature-info-panel-section-content" data-bind="html: html, style: { 'max-height': maxHeight + 'px' }"></div>
+            <div class="feature-info-panel-section-content" data-bind="markdown: html, style: { 'max-height': maxHeight + 'px' }"></div>
         </div>
     </div>
 </div>
