--- a/lib/Views/PopupMessage.html
+++ b/lib/Views/PopupMessage.html
@@ -5,7 +5,7 @@
             <h1 data-bind="text: title"></h1>
         </div>
         <div class="popup-message-content"  id="popup-window-content" >
-            <div class="popup-message-label" data-bind="html: message"></div>
+            <div class="popup-message-label" data-bind="markdown: message"></div>
         </div>
     </div>
 </div>
