Improve styling of feature popup.
Especially when displaying complete HTML documents that are expecting a white background.

--- a/lib/Styles/FeatureInfoPanel.less
+++ b/lib/Styles/FeatureInfoPanel.less
@@ -52,6 +52,15 @@
     max-height: 600px; // adjusted dynamically in FeatureInfoPanelViewModel.js
 }
 
+.feature-info-panel-section-content-white-background {
+    color: black;
+    background-color: white;
+}
+
+.feature-info-panel-section-content b {
+    font-weight: bold;
+}
+
 .feature-info-panel-close-button {
     position: absolute;
     right: 10px;
